# ckb-script-runner

./: Cargo.toml
examples/: ckbez_default.rs  ckbez_syscalls_patch.rs  mock_default.rs  mock_hook_count.rs  mock_syscalls_patch.rs
res/: exit_0  syscall
